Made the frontend for the auth features
