# backend/backend/Models/Requests/LoginRequest.cs
@@ -1,0 +1,9 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace backend.Models.Requests;
+
+public class LoginRequest
+{
+    [Required] public string Email { get; set; }
+    [Required] public string Password { get; set; }
+}
