# backend/backend/Models/Responses/UserResponse.cs
@@ -1,0 +1,8 @@
+namespace backend.Models.Responses;
+
+public class UserResponse
+{
+    public string Id { get; set; }
+    public string Email { get; set; }
+    public string UserName { get; set; }
+}
